--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0065)https://www.w3schools.com/w3css/tryw3css_templates_start_page.htm -->
 <html lang="en">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>W3.CSS Template</title>
+  <title>Homepage</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./static/w3.css">
@@ -40,8 +39,9 @@
     <div class="w3-bar w3-red w3-card w3-left-align w3-large">
       <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red"
         href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-      <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 1</a>
+      <a href="./index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+      <a href="./jasper_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Jasper's
+        Test Page</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 2</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a>
