- Added bc script.

--- a/jasper_test.html
+++ b/jasper_test.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script src="https://k012.taylor-living.com/script.js"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Jasper's Test Page</title>
 
@@ -67,9 +68,7 @@
     <div class="w3-content">
       <div class="w3-twothird">
         <h1>Jasper</h1>
-        <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat.</h5>
+        <h5 class="w3-padding-32">k012.taylor-living.com</h5>
 
         <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
