--- a/jasper_test.html
+++ b/jasper_test.html
@@ -69,7 +69,8 @@
       <div class="w3-twothird">
         <h1>Jasper</h1>
         <h5 class="w3-padding-32">k012.taylor-living.com</h5>
-
+        <a href="/recommendations/TomTom_Start_62_Europa.html">TomTom_Start_62_Europa.html</a><br />
+        <a href="/recommendations/Kenwood_Dashcam_DRV-A601W.html">Kenwood_Dashcam_DRV-A601W.html</a>
         <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
           laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
