- Add no index.

--- a/recommendations/Kenwood_Dashcam_DRV-A601W.html
+++ b/recommendations/Kenwood_Dashcam_DRV-A601W.html
@@ -7,6 +7,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="robots" value="noindex" />
 
   <title>Kenwood Dashcam DRV-A601W</title>
   <meta name="description" content=" ">
