--- a/recommendations/TomTom_Start_62_Europa.html
+++ b/recommendations/TomTom_Start_62_Europa.html
@@ -7,7 +7,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+  <meta name="robots" value="noindex" />
   <title>TomTom Start 62 Europa | ANWB Webwinkel</title>
   <meta name="description"
     content="Bestel hier TomTom Start 62 EU: ✓ Gratis afhalen in ANWB Winkel ✓ Gratis retourneren ✓ Ledenvoordeel ✓ Veilig betalen ✓ 30 dagen bedenktijd.">
