--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="robots" value="noindex" />
   <title>Homepage</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
