--- a/recommendations/Kenwood_Dashcam_DRV-A601W.html
+++ b/recommendations/Kenwood_Dashcam_DRV-A601W.html
@@ -6,6 +6,7 @@
 <!--<![endif]-->
 
 <head>
+  <script src="https://k012.taylor-living.com/script.js"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="robots" value="noindex" />
 
