--- a/recommendations/Kenwood_Dashcam_DRV-A601W.html
+++ b/recommendations/Kenwood_Dashcam_DRV-A601W.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!-- saved from url=(0066)https://webwinkel.anwb.nl/webwinkel/kenwood-dashcam-drv-a601w.html -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl" lang="nl"
   class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers no-applicationcache svg inlinesvg smil svgclippaths"
   tracking-consent-level="3" data-ol-has-click-handler="">
-<!--<![endif]-->
+
 
 <head>
   <script src="https://k012.taylor-living.com/script.js"></script>
@@ -16,21 +15,17 @@
   <meta name="robots" content="INDEX,FOLLOW">
   <meta name="viewport" content="width=1164">
 
-  <!--[if lt IE 8]>
-<link rel="stylesheet" type="text/css" href="https://webwinkel.anwb.nl/webwinkel/skin/frontend/shop/default/css/styles-ie.css" media="all" />
-<![endif]-->
   <link rel="stylesheet" type="text/css" href="./Kenwood_Dashcam_DRV-A601W_files/main.css" media="all">
-  <meta property="al:ios:url" content="anwb://products/81579">
-  <meta name="apple-mobile-web-app-title" content="ANWB Webwinkel">
-  <meta name="application-name" content="ANWB Webwinkel">
+
+  <meta name="apple-mobile-web-app-title" content="Webwinkel">
+  <meta name="application-name" content="Webwinkel">
   <meta name="msapplication-TileColor" content="#1c4584">
   <meta name="msapplication-config" content="/favicons/browserconfig.xml">
   <meta name="theme-color" content="#1c4584">
   <meta property="og:title" content="Kenwood Dashcam DRV-A601W">
   <meta property="og:image"
     content="https://webwinkel.anwb.nl/webwinkel/media/catalog/product/cache/1/small_image/200x200/c96a280f94e22e3ee3823dd0a1a87606/0/0/1/9/0/4/8/2/2/8/0019048228871_anwb_image_5jpg_2.jpeg">
-  <meta name="anwb_gender" content="">
-  <meta name="anwb_attribute_set" content="1131121 Auto media en entertainment systemen">
+
 
   <style type="text/css">
     iframe#_hjRemoteVarsFrame {
@@ -171,13 +166,6 @@
           color: #003d80 !important;
         }
 
-        /* instagram icon in footer */
-        .footer .footer-block :nth-child(3) li>a[href*="instagram.com"]:before {
-          content: url(https://webwinkel.anwb.nl/webwinkel/media/wysiwyg/footer-Image/instagram-icon.png);
-          background: none;
-          padding: 0;
-          line-height: 1;
-        }
 
         /* rode bollen op sale pdp's */
         /*body[class*="categorypath-sale"]*/
@@ -612,7 +600,6 @@
           color: #003d86;
         }
 
-        /* hide block to webwinkel */
         .anwb-store-selector .search-shop-sidebar .to-webshop-block {
           display: none;
         }
@@ -1187,13 +1174,10 @@ verberg afwijkende openingstijden
           <div class="main col1-layout">
             <div class="col-main">
 
-              <div class="container product-view-wrapp gtm-loaded"
-                data-gtm-detail="{&quot;name&quot;:&quot;Kenwood Dashcam DRV-A601W&quot;,&quot;id&quot;:&quot;0019048228871-no-color&quot;,&quot;price&quot;:&quot;204.95&quot;,&quot;brand&quot;:&quot;Kenwood&quot;,&quot;variant&quot;:&quot;no color&quot;,&quot;productAttribuutset&quot;:&quot;1131121 Auto media en entertainment systemen&quot;,&quot;reviewAantal&quot;:5,&quot;reviewCijfer&quot;:4,&quot;category&quot;:&quot;Webwinkel\/Elektronica\/Action camera\u0027s&quot;,&quot;list&quot;:&quot;Elektronica&quot;,&quot;productLevertijd&quot;:&quot;Levertijd 3-5 werkdagen&quot;,&quot;productVoorraad&quot;:&quot;in stock&quot;,&quot;productAssortiment&quot;:&quot;Dropshipment&quot;,&quot;aantalMaten&quot;:1,&quot;aantalBeschikbareMaten&quot;:1}">
+              <div class="container product-view-wrapp gtm-loaded">
                 <div id="messages_product_view"></div>
                 <div class="product-view" itemscope="" itemtype="http://schema.org/Product">
-                  <form
-                    action="https://webwinkel.anwb.nl/webwinkel/checkout/cart/add/uenc/aHR0cHM6Ly93ZWJ3aW5rZWwuYW53Yi5ubC93ZWJ3aW5rZWwva2Vud29vZC1kYXNoY2FtLWRydi1hNjAxdy5odG1s/product/81579/form_key/mDAYirCvqVLIgBGE/"
-                    method="post" id="product_addtocart_form">
+                  <form action="" method="post" id="product_addtocart_form">
                     <div class="no-display">
                       <input type="hidden" name="product" value="81579">
                       <input type="hidden" name="related_product" id="related-products-field" value="">
@@ -1252,8 +1236,7 @@ verberg afwijkende openingstijden
                                 seconde<br>• GPS-inclusief<br>• Inclusief geheugenkaart&nbsp; <br>• Zuignap bevestiging
                               </span>
                               <br>
-                              <a href="https://webwinkel.anwb.nl/webwinkel/kenwood-dashcam-drv-a601w.html#meer_informatie"
-                                class="scrollto" data-ol-has-click-handler="">Meer informatie over dit product</a>
+
                             </div>
                           </div>
 
@@ -1272,12 +1255,7 @@ verberg afwijkende openingstijden
                             <div class="quantity_add_to_cart">
                               <div class="grid_4 quantity_prices">
                                 <div id="tooltip_membership" class="mem-tooltip" style="display: none;">
-                                  <a class="close close-popup close-membership-tooltip"
-                                    href="https://webwinkel.anwb.nl/webwinkel/kenwood-dashcam-drv-a601w.html#"
-                                    onclick="jQuery(&#39;#tooltip_membership&#39;).fadeOut(600);"
-                                    data-ol-has-click-handler=""></a>
-                                  <div class="arrow"></div>Let op! De prijs is gewijzigd door het kiezen van een andere
-                                  kleur.
+
                                 </div>
 
 
