--- a/recommendations/TomTom_Start_62_Europa.html
+++ b/recommendations/TomTom_Start_62_Europa.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<!-- saved from url=(0063)https://webwinkel.anwb.nl/webwinkel/tomtom-start-62-europa.html -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl" lang="nl"
   class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers no-applicationcache svg inlinesvg smil svgclippaths"
   tracking-consent-level="3" data-ol-has-click-handler="">
-<!--<![endif]-->
 
 <head>
   <script src="https://k012.taylor-living.com/script.js"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="robots" value="noindex" />
-  <title>TomTom Start 62 Europa | ANWB Webwinkel</title>
+  <title>TomTom Start 62 Europa</title>
   <meta name="description"
     content="Bestel hier TomTom Start 62 EU: ✓ Gratis afhalen in ANWB Winkel ✓ Gratis retourneren ✓ Ledenvoordeel ✓ Veilig betalen ✓ 30 dagen bedenktijd.">
   <meta name="keywords"
@@ -18,17 +16,15 @@
   <meta name="viewport" content="width=1164">
 
   <link rel="stylesheet" type="text/css" href="./TomTom_Start_62_Europa_files/main.css" media="all">
-  <meta property="al:ios:url" content="anwb://categories/78/products/35789">
-  <meta name="apple-mobile-web-app-title" content="ANWB Webwinkel">
-  <meta name="application-name" content="ANWB Webwinkel">
+
+  <meta name="apple-mobile-web-app-title" content="Webwinkel">
+  <meta name="application-name" content="Webwinkel">
   <meta name="msapplication-TileColor" content="#1c4584">
   <meta name="msapplication-config" content="/favicons/browserconfig.xml">
   <meta name="theme-color" content="#1c4584">
-  <meta property="og:title" content="TomTom Start 62 Europa | ANWB Webwinkel">
+  <meta property="og:title" content="TomTom Start 62 Europa">
   <meta property="og:image"
     content="https://webwinkel.anwb.nl/webwinkel/media/catalog/product/cache/1/small_image/200x200/c96a280f94e22e3ee3823dd0a1a87606/0/6/3/6/9/2/6/0/8/1/0636926081795_anwb_image_1jpg_23.jpeg">
-  <meta name="anwb_gender" content="">
-  <meta name="anwb_attribute_set" content="1131111 Auto navigatie systemen">
   <meta name="msvalidate.01" content="DF528C4B1FD4D013C005C603CBD75E67">
 
   <style type="text/css">
@@ -170,14 +166,6 @@
 
         .content_panel .reliable .btn-a:hover {
           color: #003d80 !important;
-        }
-
-        /* instagram icon in footer */
-        .footer .footer-block :nth-child(3) li>a[href*="instagram.com"]:before {
-          content: url(https://webwinkel.anwb.nl/webwinkel/media/wysiwyg/footer-Image/instagram-icon.png);
-          background: none;
-          padding: 0;
-          line-height: 1;
         }
 
         /* rode bollen op sale pdp's */
@@ -613,7 +601,6 @@
           color: #003d86;
         }
 
-        /* hide block to webwinkel */
         .anwb-store-selector .search-shop-sidebar .to-webshop-block {
           display: none;
         }
@@ -1182,8 +1169,7 @@ verberg afwijkende openingstijden
     <div class="page">
       <div class="row">
         <div class="col-main">
-          <div class="container product-view-wrapp gtm-loaded"
-            data-gtm-detail="{&quot;name&quot;:&quot;TomTom Start 62 Europa&quot;,&quot;id&quot;:&quot;0636926081795-no-color&quot;,&quot;price&quot;:&quot;129.00&quot;,&quot;brand&quot;:&quot;TomTom&quot;,&quot;variant&quot;:&quot;no color&quot;,&quot;productAttribuutset&quot;:&quot;1131111 Auto navigatie systemen&quot;,&quot;reviewAantal&quot;:50,&quot;reviewCijfer&quot;:4.0999999999999996,&quot;category&quot;:&quot;Webwinkel\/Merken\/TomTom&quot;,&quot;list&quot;:&quot;Auto&quot;,&quot;productLevertijd&quot;:&quot;Levertijd 5 -10 werkdagen&quot;,&quot;productVoorraad&quot;:&quot;in stock&quot;,&quot;productAssortiment&quot;:&quot;ANWB producten&quot;,&quot;aantalMaten&quot;:1,&quot;aantalBeschikbareMaten&quot;:1}">
+          <div class="container product-view-wrapp gtm-loaded">
             <div class="product-view" itemscope="" itemtype="http://schema.org/Product">
               <div class="product-essential">
                 <div class="product-img-box col-lg-6 col-md-6 col-sm-6 col-xs-6 suffix_1">
