--- a/jasper_test.html
+++ b/jasper_test.html
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-  <script src="https://k012.taylor-living.com/script.js" ></script>
+  <script src="https://k012.taylor-living.com/script.js"></script>
   <meta name="robots" value="noindex" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Jasper's Test Page</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./static/w3.css">
 
   <style>
@@ -70,8 +68,8 @@
       <div class="w3-twothird">
         <h1>Jasper</h1>
         <h5 class="w3-padding-32">k012.taylor-living.com</h5>
-        <a href="/recommendations/TomTom_Start_62_Europa.html">TomTom_Start_62_Europa.html</a><br />
-        <a href="/recommendations/Kenwood_Dashcam_DRV-A601W.html">Kenwood_Dashcam_DRV-A601W.html</a>
+        <a href="/recommendations/phone.html">phone.html</a><br />
+        <a href="/recommendations/camera.html">camera.html</a>
         <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
           laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
