- Added type product.

--- a/recommendations/camera.html
+++ b/recommendations/camera.html
@@ -42,16 +42,18 @@
 
 <body>
   <div class="wrapper">
-    <p class="product-image">
-      <img width="100" title="Camera VFG-A01W" itemprop="image" src="./camera/camera.jpg" />
-    </p>
-    <div class="product-info">
-      <div class="product-name">
-        <h1><span itemprop="name">Camera VFG-A01W</span></h1>
-      </div>
-      <p class="product-ids">CAM# 123456</p>
-      <div class="product-rating">
-        <span itemprop="brand">Test brand</span>
+    <div class="product-view" itemscope="" itemtype="http://schema.org/Product">
+      <p class="product-image">
+        <img width="100" title="Camera VFG-A01W" itemprop="image" src="./camera/camera.jpg" />
+      </p>
+      <div class="product-info">
+        <div class="product-name">
+          <h1><span itemprop="name">Camera VFG-A01W</span></h1>
+        </div>
+        <p class="product-ids">CAM# 123456</p>
+        <div class="product-rating">
+          <span itemprop="brand">Test brand</span>
+        </div>
       </div>
     </div>
   </div>
