--- a/recommendations/phone.html
+++ b/recommendations/phone.html
@@ -41,16 +41,18 @@
 
 <body>
   <div class="wrapper">
-    <p class="product-image">
-      <img width="100" id="main_product_image" title="Phone A12" alt="Phone A12" itemprop="image"
-        src="./phone/phone.jpeg">
-    </p>
-    <div class="product-name">
-      <h1><span itemprop="name">Phone A12</span></h1>
-    </div>
-    <p class="product-ids">PROD# 01234</p>
-    <div class="product-rating">
-      <span itemprop="brand">Phone brand</span>
+    <div class="product-view" itemscope="" itemtype="http://schema.org/Product">
+      <p class="product-image">
+        <img width="100" id="main_product_image" title="Phone A12" alt="Phone A12" itemprop="image"
+          src="./phone/phone.jpeg">
+      </p>
+      <div class="product-name">
+        <h1><span itemprop="name">Phone A12</span></h1>
+      </div>
+      <p class="product-ids">PROD# 01234</p>
+      <div class="product-rating">
+        <span itemprop="brand">Phone brand</span>
+      </div>
     </div>
   </div>
 </body>
