--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script src="https://localhost/frontend/static/javascript/blueconic/blueconic.min.js"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="robots" value="noindex" />
   <title>Homepage</title>
