- Set bc script to test server.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
 <head>
-  <script src="https://localhost/frontend/static/javascript/blueconic/blueconic.min.js"></script>
+
+  <!--<script src="https://localhost/frontend/static/javascript/blueconic/blueconic.min.js"></script>-->
+  <script async=""
+    src="https://tenant01-slot03-bc03.blueconic.net/frontend/static/javascript/blueconic/blueconic.min.js"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="robots" value="noindex" />
   <title>Homepage</title>
