--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   </style>
 </head>
 
+
 <body>
 
   <!-- Navbar -->
@@ -45,7 +46,7 @@
       <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red"
         href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="./index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-      <a href="./jasper_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Jasper's
+      <a href="./erik_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Erik's
         Test Page</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 2</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
