--- a/index.html
+++ b/index.html
@@ -115,6 +115,40 @@
           quis nostrud exercitation ullamco
           laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
+      <form id="sample_form" method="get" action="">
+        <p>
+          What is your name:
+          <input name="name">
+          <br>What is your email address:
+          <input name="email">
+          <br>What is your age:
+          <input name="age">
+          <br>What is your favorite color:
+          <select name="color">
+            <option selected="selected">chartreuse</option>
+            <option>azure</option>
+            <option>puce</option>
+            <option>mustard</option>
+          </select>
+          <br>What are your preferences?:
+          <select name="preferences">
+            <option selected="selected">Shoes</option>
+            <option>Politics</option>
+            <option>Magazine</option>
+            <option>Marathon</option>
+            <option>Soccer</option>
+            <option>Yoga</option>
+          </select>
+          <br>What is your favorite number:
+          <input name="number">
+          <br>What is your year of birth
+          <input name="birthyear">
+          <br>What is your birth date?
+          <input name="birthdate">
+          <br>Press <input type="submit" value="here"> to submit your
+          query.
+        </p>
+      </form>
     </div>
   </div>
 
