--- a/roel_test.html
+++ b/roel_test.html
@@ -5,7 +5,7 @@
   <script src="https://e592.taylor-living.com/script.js" ></script>
   <meta name="robots" value="noindex" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Jasper's Test Page</title>
+  <title>Roel's Test Page</title>
   <link rel="stylesheet" href="./static/w3.css">
 
   <style>
@@ -42,7 +42,7 @@
       <a href="./index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
       <a href="./jasper_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Jasper's
         Test Page</a>
-      <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 2</a>
+      <a href="./jasper_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Roel Test</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a>
     </div>
