--- a/roel_test.html
+++ b/roel_test.html
@@ -58,7 +58,7 @@
 
   <!-- Header -->
   <header class="w3-container w3-red w3-center" style="padding:128px 16px">
-    <h1 class="w3-margin w3-jumbo">Jasper's Test Page</h1>
+    <h1 class="w3-margin w3-jumbo">Roel's Test Page</h1>
     <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
   </header>
 
@@ -66,8 +66,8 @@
   <div class="w3-row-padding w3-padding-64 w3-container">
     <div class="w3-content">
       <div class="w3-twothird">
-        <h1>Jasper</h1>
-        <h5 class="w3-padding-32">k012.taylor-living.com</h5>
+        <h1>Roel</h1>
+        <h5 class="w3-padding-32">e592.taylor-living.com</h5>
         <a href="/recommendations/phone.html">phone.html</a><br />
         <a href="/recommendations/camera.html">camera.html</a>
         <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
