--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a href="./index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
       <a href="./erik_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Erik's
         Test Page</a>
-      <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 2</a>
+      <a href="./roel_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Roel's test page</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a>
     </div>
