--- a/roel_test.html
+++ b/roel_test.html
@@ -40,9 +40,9 @@
       <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red"
         href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="./index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-      <a href="./jasper_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Jasper's
+      <a href="./erik_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Jasper's
         Test Page</a>
-      <a href="./jasper_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Roel Test</a>
+      <a href="./roel_test.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Roel Test</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
       <a href="" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a>
     </div>
