--- a/test-fphc/index.html
+++ b/test-fphc/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <script src="https://f026.taylor-living.com/script.js"></script>
+  <script src="https://c.f026.taylor-living.com/script.js"></script>
   <meta charset="utf-8" />
   <title>Team Riva</title>
 </head>
@@ -10,7 +10,7 @@
 <body>
   <div class="mainContentWrapper">
     <div class="contentSub">
-      Test with script "f026.taylor-living.com"
+      Test with script "c.f026.taylor-living.com" (NOT f026.taylor-living.com)
     </div>
   </div>
 </body>
